New in 0.7.x:
  * Created check-vars.sh script to eliminate the need to generate all
    the tests scripts at build time
  * Made the tests work in non-English locales

New in 0.7.13:
  * Working with libexif and exif ver. 0.6.17
  * Additional tests on pel images
  * Fixed build-config.sh to properly update CVS repositories

New in 0.7.12:
  * Added build-config.sh SVN support.
  * Fetch pel (PHP Exif Library) test images via SVN.
  * Get rid of autogen.sh.
  * Always check PEL images.
  * Use auto-m4 for autoreconf-provided *.m4 files.